<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="playerEntryViewModel"
            type="com.samples.tdd_tictactoe.view.entry.PlayerEntryViewModel" />
    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:padding="@dimen/margin_10"
            tools:context=".view.fragments.EntryFragment">

            <TextView
                android:id="@+id/textViewLetsBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/entry_title_label"
                android:textColor="@color/black"
                android:textSize="@dimen/font_30"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/textViewDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/enter_your_name"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20"
                app:layout_constraintEnd_toEndOf="@id/textViewLetsBegin"
                app:layout_constraintStart_toStartOf="@id/textViewLetsBegin"
                app:layout_constraintTop_toBottomOf="@id/textViewLetsBegin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPlayer1"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:hint="@string/player1_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDescriptionLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="12"
                    android:text="@={playerEntryViewModel.playerX}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPlayer2"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_25"
                android:hint="@string/player2_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPlayer1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="12"
                    android:text="@={playerEntryViewModel.playerO}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_25"
                android:background="@drawable/button_background"
                android:text="@string/entry_title_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPlayer2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
