<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/entryFragment">

    <fragment
        android:id="@+id/entryFragment"
        android:name="com.samples.tdd_tictactoe.view.entry.PlayerEntryFragment"
        tools:layout="@layout/fragment_player_entry">
        <action
            android:id="@+id/action_entryFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.samples.tdd_tictactoe.view.game.GameBoardFragment"
        android:label="@string/game_label"
        tools:layout="@layout/fragment_board">
        <argument
            android:name="playerData"
            app:argType="com.samples.tdd_tictactoe.model.PlayerData" />
    </fragment>

</navigation>
