<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TDD-TicTacToe</string>

    <string name="entry_title_label">Let\'s Begin</string>
    <string name="enter_your_name">Enter the player</string>
    <string name="player1_hint" tools:ignore="Typos">player1</string>
    <string name="player2_hint">player2</string>
    <string name="entry">Player Entry</string>
    <string name="enter_all_fields">Please enter all the fields</string>
    <string name="game_label">TicTacToe</string>
    <string name="board_screen_title">TIC TAC TOE</string>
    <string name="next_player_title_label">Next Player: %1s</string>
    <string name="game_finish_with_winner">%1s wins!!</string>
    <string name="game_finish_with_draw">This is a Draw!! More luck next time</string>
    <string name="restart_game_button">Restart the game</string>
    <string name="cell_item">Cell Item</string>
</resources>